Added Brno on new Map

--- a/lib/l10n/intl_cs.arb
+++ b/lib/l10n/intl_cs.arb
@@ -1,61 +1,33 @@
 {
   "@@locale": "cs",
+  "currentLocale": "cs",
   "about": "O mně",
-  "@about": {},
   "check": "Zkoumat",
-  "@check": {},
   "cloud": "Všechny jazyky",
-  "@cloud": {},
   "contacts": "Kontakty",
-  "@contacts": {},
   "contactsDesc": "Fyzicky jsem v Brně, na internetu, znám spíše jako „tsinis“:",
-  "@contactsDesc": {},
   "cv": "Stáhnout si CV",
-  "@cv": {},
   "devAndDesigner": "Flutter vývojář a grafik",
-  "@devAndDesigner": {},
   "email": "nebo mi prostě napište starý dobrý e-mail:",
-  "@email": {},
   "findInPortfolio": "Zde najdete",
-  "@findInPortfolio": {},
   "flutterClock": "Tento projekt je jedním z vítězů ve společné vývojářské/design soutěži firem Google a Lenovo, pod názvem “Flutter Clock” (se skoro tisícovkou příspěvků z celého světa).",
-  "@flutterClock": {},
   "fullName": "Roman Cinis",
-  "@fullName": {},
   "greeting": "Vítejte, jsem",
-  "@greeting": {},
   "helloDribbble": "Toto je projekt ukazující Interaktivní animace, které jsem vytvořil jako svůj Debut na legendárním Dribbble, poté co jsem, nedávno, dostal vytoužené pozvaní.",
-  "@helloDribbble": {},
   "iAm": "Jsem oceněným „T-shaped“ specialistou jakožto Flutter vývojář a grafik, s velkou láskou k interaktivním animacím a dobrému UX. Udělejme něco úžasného společně!\n\nChcete vědět více?",
-  "@iAm": {},
   "inAction": "v akci",
-  "@inAction": {},
   "language": "Jazyk",
-  "@language": {},
   "planetBGame": "Hra Plan-et-а B",
-  "@planetBGame": {},
   "planetBGameDesc": "Tato PWA hra je jedním z vítězů v letošním oficiálním, dvoudenním hackathonu Společenství Flutter, kterého se zúčastnilo přes dva a pul tisíce lidi z celého světa.",
-  "@planetBGameDesc": {},
   "portfolio": "Portfolio",
-  "@portfolio": {},
   "projectsPortfolio": "projektů a repositářů.",
-  "@projectsPortfolio": {},
   "see": "Zhlédnout",
-  "@see": {},
   "selectLang": "select your language",
-  "@selectLang": {},
   "somePortfilio": "některé z mých",
-  "@somePortfilio": {},
   "theCode": "kód",
-  "@theCode": {},
   "theDesign": "design",
-  "@theDesign": {},
   "thisWeb": "Táto webová stránka",
-  "@thisWeb": {},
   "thisWebDesc": "Samozřejmé, že celý tento web je vytvořen ve Flutteru a je napsán na čistém Dartu. Závislost jedné a jediné, třetí strany je animace v sekci \"O mně\", která byla vytvořena v Rive.",
-  "@thisWebDesc": {},
   "tongueTwisters": "Jazykolamy",
-  "@tongueTwisters": {},
-  "tongueTwistersDesc": "Aplikace pro testování jazykolamů, se zaměřením na design. Vytvořeno ve spolupráci s ilustrátorem — proto licence mi neumožňuje otevřít zdroj (tj. i ilustrace).",
-  "@tongueTwistersDesc": {}
+  "tongueTwistersDesc": "Aplikace pro testování jazykolamů, se zaměřením na design. Vytvořeno ve spolupráci s ilustrátorem — proto licence mi neumožňuje otevřít zdroj (tj. i ilustrace)."
 }
