--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -1,61 +1,33 @@
 {
   "@@locale": "ru",
+  "currentLocale": "ru",
   "about": "Обо мне",
-  "@about": {},
   "check": "Проверьте",
-  "@check": {},
   "cloud": "Все языки",
-  "@cloud": {},
   "contacts": "Контакты",
-  "@contacts": {},
   "contactsDesc": "Физически нахожусь в Брно, в этих интернетах я известен как «tsinis»:",
-  "@contactsDesc": {},
   "cv": "Скачать CV",
-  "@cv": {},
   "devAndDesigner": "Flutter разработчик и дизайнер",
-  "@devAndDesigner": {},
   "email": "или же просто напишите мне на электронную почту:",
-  "@email": {},
   "findInPortfolio": "Здесь вы найдёте",
-  "@findInPortfolio": {},
   "flutterClock": "Этот проект является одним из победителей совместного конкурса, компаний Google и Lenovo, под названием «Flutter Clock» (с почти тысячей проектов со всего мира).",
-  "@flutterClock": {},
   "fullName": "Роман Цинис",
-  "@fullName": {},
   "greeting": "Приветствую, я",
-  "@greeting": {},
   "helloDribbble": "Этот проект — демонстрация интерактивных анимаций, сделанных в качестве Дебюта на легендарном Dribbble, на который я получил долгожданное приглашение.",
-  "@helloDribbble": {},
   "iAm": "Я награждённый T-специалист в области Flutter разработки и дизайна, с большой любовью к интерактивным анимациям и хорошему UX. Давайте сделаем что-то классное вместе!\n\nХотите узнать больше?",
-  "@iAm": {},
   "inAction": "видео",
-  "@inAction": {},
   "language": "Язык",
-  "@language": {},
   "planetBGame": "Игра План-ет-а Б",
-  "@planetBGame": {},
   "planetBGameDesc": "Этот проект - стал одним из победителей официального двухдневного хакатона Flutter Сообщества в этом году. В хакатоне приняли участие более двух с половиной тысяч человек со всего мира.",
-  "@planetBGameDesc": {},
   "portfolio": "Портфолио",
-  "@portfolio": {},
   "projectsPortfolio": "проектов и репозиториев",
-  "@projectsPortfolio": {},
   "see": "Смотреть",
-  "@see": {},
   "selectLang": "select your language",
-  "@selectLang": {},
   "somePortfilio": "некоторые из моих",
-  "@somePortfilio": {},
   "theCode": "код",
-  "@theCode": {},
   "theDesign": "дизайн",
-  "@theDesign": {},
   "thisWeb": "Этот веб-сайт",
-  "@thisWeb": {},
   "thisWebDesc": "Разумеется, весь этот сайт написан в Flutter на чистейшем Dart. Единственная сторонняя зависимость тут — это анимация в секции «Обо мне», которая сделана в Rive.",
-  "@thisWebDesc": {},
   "tongueTwisters": "Скороговорки",
-  "@tongueTwisters": {},
-  "tongueTwistersDesc": "Аппликация создана для тестирования скороговорок с главным упором на дизайн. Создана совместно с иллюстратором, потому правила лицензии не позволяет мне выложить проект (т.е. и иллюстрации) в открытый доступ.",
-  "@tongueTwistersDesc": {}
+  "tongueTwistersDesc": "Аппликация создана для тестирования скороговорок с главным упором на дизайн. Создана совместно с иллюстратором, потому правила лицензии не позволяет мне выложить проект (т.е. и иллюстрации) в открытый доступ."
 }
