--- a/lib/l10n/intl_sk.arb
+++ b/lib/l10n/intl_sk.arb
@@ -1,61 +1,33 @@
 {
   "@@locale": "sk",
+  "currentLocale": "sk",
   "about": "O mne",
-  "@about": {},
   "check": "Skúmať",
-  "@check": {},
   "cloud": "Všetky jazyky",
-  "@cloud": {},
   "contacts": "Kontakty",
-  "@contacts": {},
   "contactsDesc": "Fyzicky som v Brne, na internete, známy skôr ako „tsinis“:",
-  "@contactsDesc": {},
   "cv": "Stiahnuť si CV",
-  "@cv": {},
   "devAndDesigner": "Flutter vývojár a grafik",
-  "@devAndDesigner": {},
   "email": "alebo mi jednoducho napíšte starý dobrý e-mail:",
-  "@email": {},
   "findInPortfolio": "Tu nájdete",
-  "@findInPortfolio": {},
   "flutterClock": "Tento projekt je jedným z víťazov v spoločnej vývojárske/dizajn súťaži firiem Google a Lenovo, pod názvom \"Flutter Clock\" (sa skoro tisíckou príspevkov z celého sveta).",
-  "@flutterClock": {},
   "fullName": "Roman Cinis",
-  "@fullName": {},
   "greeting": "Vitajte, som",
-  "@greeting": {},
   "helloDribbble": "Toto je projekt ukazujúce Interaktívne animácie, ktoré som vytvoril ako svoj Debut na legendárnom Dribbble, potom čo som, nedávno, dostal vytúžené pozvaní.",
-  "@helloDribbble": {},
   "iAm": "Som oceneným „T-shaped“ špecialistom ako Flutter vývojár a grafik, s veľkou láskou k interaktívnym animáciám a dobrému UX. Urobme niečo úžasné spoločne!\n\nChcete vedieť viac?",
-  "@iAm": {},
   "inAction": "v akcii",
-  "@inAction": {},
   "language": "Jazyk",
-  "@language": {},
   "planetBGame": "Hra Plan-et-а B",
-  "@planetBGame": {},
   "planetBGameDesc": "Táto PWA hra je jedným z víťazov v tohtoročnom oficiálnom, dvojdňovom hackathonu Spoločenstva Flutter, ktorého sa zúčastnilo cez dva a pol tisícky ľudí z celého sveta.",
-  "@planetBGameDesc": {},
   "portfolio": "Portfólio",
-  "@portfolio": {},
   "projectsPortfolio": "projektov a repozitárov.",
-  "@projectsPortfolio": {},
   "see": "Pozrieť",
-  "@see": {},
   "selectLang": "select your language",
-  "@selectLang": {},
   "somePortfilio": "niektoré z mojich",
-  "@somePortfilio": {},
   "theCode": "kód",
-  "@theCode": {},
   "theDesign": "dizajn",
-  "@theDesign": {},
   "thisWeb": "Táto webová stránka",
-  "@thisWeb": {},
   "thisWebDesc": "Samozrejmé, že celý tento web je vytvorený vo Flutter a je napísaný na čistom Dart. Závislosť jednej a jediné, tretie strany je animácia v sekcii \"O mne\", ktorá bola vytvorená v Rive.",
-  "@thisWebDesc": {},
   "tongueTwisters": "Jazykolamy",
-  "@tongueTwisters": {},
-  "tongueTwistersDesc": "Aplikácia pre testovanie jazykolamov, so zameraním na dizajn. Vytvorené v spolupráci s ilustrátorom - preto licencie mi neumožňuje otvoriť zdroj (tj. aj ilustrácie).",
-  "@tongueTwistersDesc": {}
+  "tongueTwistersDesc": "Aplikácia pre testovanie jazykolamov, so zameraním na dizajn. Vytvorené v spolupráci s ilustrátorom - preto licencie mi neumožňuje otvoriť zdroj (tj. aj ilustrácie)."
 }
