--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -28,6 +28,7 @@
   "theDesign": "дизайн",
   "thisWeb": "Этот веб-сайт",
   "thisWebDesc": "Разумеется, весь этот сайт написан в Flutter на чистейшем Dart. Единственная сторонняя зависимость тут — это анимация в секции «Обо мне», которая сделана в Rive.",
+  "iconTools": "Набор инструментов для создания иконок приложения Flutter аппликаций. Поддерживает и мобильные платформы, но ориенторованна скорее на стационарные компьютеры.",
   "tongueTwisters": "Скороговорки",
   "tongueTwistersDesc": "Аппликация создана для тестирования скороговорок с главным упором на дизайн. Создана совместно с иллюстратором, потому правила лицензии не позволяет мне выложить проект (т.е. и иллюстрации) в открытый доступ."
 }
