Updating English translation

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -8,13 +8,13 @@
   "contactsDesc": "Physically in the city of Brno, on the internets, I'm known as a “tsinis”:",
   "cv": "Grab my CV",
   "devAndDesigner": "Flutter Developer & Designer",
-  "email": "or just simply write me the good old e-mail here:",
+  "email": "or just simply write me a good old e-mail here:",
   "findInPortfolio": "Here you can find",
-  "flutterClock": "This project is one of the winning submissions in Official Google's & Lenovo dev/design contest, called “Flutter Clock” (with almost a thousand entries worldwide).",
+  "flutterClock": "This project is one of the winning submissions in the Official Google's & Lenovo dev/design contest, called “Flutter Clock” (with almost a thousand entries worldwide).",
   "fullName": "Roman Cinis",
   "greeting": "Hello there, I'm",
   "helloDribbble": "Interactive animations showcase project, I've made, as my Debut Shot for legendary Dribbble.com, аfter I won the invitation (so now as a “Player”).",
-  "iAm": "I'm awarded T-shaped specialist in the fields of Flutter Development and Design, with great love for interactive animations and good UX. Let's make something awesome together!\n\nWant to know more?",
+  "iAm": "I'm awarded a T-shaped specialist in the fields of Flutter Development and Design, with a great love for interactive animations and good UX. Let's make something awesome together!\n\nWant to know more?",
   "inAction": "Video",
   "language": "Language",
   "planetBGame": "Plan-et-B Game",
@@ -28,7 +28,7 @@
   "theDesign": "Design",
   "thisWeb": "This Website",
   "thisWebDesc": "Obviously, this entire website is made in Flutter and written on pure Dart. The one and only third-party dependency is the animation in the About section, which was made in Rive.",
-  "iconTools": "A set of tools for creating Flutter application icons. Support all platforms, including mobile but designed as “Desktop First” solution.",
+  "iconTools": "A set of tools, for creating and previewing Flutter application icons. Support all platforms, including mobile but designed as “Desktop First” solution.",
   "tongueTwisters": "Tongue Twisters",
   "tongueTwistersDesc": "Application for testing tongue twisters with focus on the design. Created it in coop with illustrator – license do not allow me to open source (i.e. illustrations)."
 }
