Changing MaterialApp to WidgetsApp, refactoring

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -14,7 +14,7 @@
   "fullName": "Roman Cinis",
   "greeting": "Hello there, I'm",
   "helloDribbble": "Interactive animations showcase project, I've made, as my Debut Shot for legendary Dribbble.com, аfter I won the invitation (so now as a “Player”).",
-  "iAm": "I'm awarded a T-shaped specialist in the fields of Flutter Development and Design, with a great love for interactive animations and good UX. Let's make something awesome together!\n\nWant to know more?",
+  "iAm": "I'm awarded T-shaped specialist in the fields of Flutter Development and Design, with a great love for interactive animations and good UX. Let's make something awesome together!\n\nWant to know more?",
   "inAction": "Video",
   "language": "Language",
   "planetBGame": "Plan-et-B Game",
