Updating Map package (Breaking Changes)

--- a/lib/l10n/intl_cs.arb
+++ b/lib/l10n/intl_cs.arb
@@ -18,7 +18,7 @@
   "inAction": "v akci",
   "language": "Jazyk",
   "planetBGame": "Hra Plan-et-а B",
-  "planetBGameDesc": "Tato PWA hra je jedním z vítězů v letošním oficiálním, dvoudenním hackathonu Společenství Flutter, kterého se zúčastnilo přes dva a pul tisíce lidi z celého světa.",
+  "planetBGameDesc": "Tato PWA hra je jedním z vítězů v loňském oficiálním, dvoudenním hackathonu Společenství Flutter, kterého se zúčastnilo přes dva a pul tisíce lidi z celého světa.",
   "portfolio": "Portfolio",
   "projectsPortfolio": "projektů a repositářů.",
   "see": "Zhlédnout",
