--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -18,7 +18,7 @@
   "inAction": "Video",
   "language": "Language",
   "planetBGame": "Plan-et-B Game",
-  "planetBGameDesc": "This project is one of the winners of this year's official Flutter Community Hackaton. More than two and a half thousand developers from all over the world took part in it.",
+  "planetBGameDesc": "This project is one of the winners of last year's official Flutter Community Hackaton. More than two and a half thousand developers from all over the world took part in it.",
   "portfolio": "Portfolio",
   "projectsPortfolio": "projects and repositories.",
   "see": "See the",
