--- a/lib/l10n/intl_sk.arb
+++ b/lib/l10n/intl_sk.arb
@@ -18,7 +18,7 @@
   "inAction": "v akcii",
   "language": "Jazyk",
   "planetBGame": "Hra Plan-et-а B",
-  "planetBGameDesc": "Táto PWA hra je jedným z víťazov v tohtoročnom oficiálnom, dvojdňovom hackathonu Spoločenstva Flutter, ktorého sa zúčastnilo cez dva a pol tisícky ľudí z celého sveta.",
+  "planetBGameDesc": "Táto PWA hra je jedným z víťazov v minuloročnom oficiálnom, dvojdňovom hackathonu Spoločenstva Flutter, ktorého sa zúčastnilo cez dva a pol tisícky ľudí z celého sveta.",
   "portfolio": "Portfólio",
   "projectsPortfolio": "projektov a repozitárov.",
   "see": "Pozrieť",
