--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -18,7 +18,7 @@
   "inAction": "видео",
   "language": "Язык",
   "planetBGame": "Игра План-ет-а Б",
-  "planetBGameDesc": "Этот проект - стал одним из победителей официального двухдневного хакатона Flutter Сообщества в этом году. В хакатоне приняли участие более двух с половиной тысяч человек со всего мира.",
+  "planetBGameDesc": "Этот проект - стал одним из победителей официального двухдневного хакатона Flutter Сообщества в прошлом году. В хакатоне приняли участие более двух с половиной тысяч человек со всего мира.",
   "portfolio": "Портфолио",
   "projectsPortfolio": "проектов и репозиториев",
   "see": "Смотреть",
