--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -13,7 +13,6 @@
   "flutterClock": "Этот проект является одним из победителей совместного конкурса, компаний Google и Lenovo, под названием «Flutter Clock» (с почти тысячей проектов со всего мира).",
   "fullName": "Роман Цинис",
   "greeting": "Приветствую, я",
-  "helloDribbble": "Этот проект — демонстрация интерактивных анимаций, сделанных в качестве Дебюта на легендарном Dribbble, на который я получил долгожданное приглашение.",
   "iAm": "Я награждённый T-специалист в области Flutter разработки и дизайна, с большой любовью к интерактивным анимациям и хорошему UX. Давайте сделаем что-то классное вместе!\n\nХотите узнать больше?",
   "inAction": "видео",
   "language": "Язык",
@@ -26,9 +25,8 @@
   "somePortfilio": "некоторые из моих",
   "theCode": "код",
   "theDesign": "дизайн",
-  "thisWeb": "Этот веб-сайт",
-  "thisWebDesc": "Разумеется, весь этот сайт написан в Flutter на чистейшем Dart. Единственная сторонняя зависимость тут — это анимация в секции «Обо мне», которая сделана в Rive.",
   "iconTools": "Набор инструментов для создания иконок приложения Flutter аппликаций. Поддерживает и мобильные платформы, но ориенторованна скорее на стационарные компьютеры.",
   "tongueTwisters": "Скороговорки",
-  "tongueTwistersDesc": "Аппликация создана для тестирования скороговорок с главным упором на дизайн. Создана совместно с иллюстратором, потому правила лицензии не позволяет мне выложить проект (т.е. и иллюстрации) в открытый доступ."
+  "tongueTwistersDesc": "Аппликация создана для тестирования скороговорок с главным упором на дизайн. Создана совместно с иллюстратором, потому правила лицензии не позволяет мне выложить проект (т.е. и иллюстрации) в открытый доступ.",
+  "colorsAiDesc": "Генератор цветовых схем использующий глубокое обучение из Colormind API, с упором на управление жестами. Приложение выполнено в реактивном стиле с использованием паттерна BLoC, в четырехслойной архитектуре."
 }
